--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-blue w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
+    <a href="https://s4nbenne.github.io/home.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Home</a>
     <a href="https://www.youtube.com/watch?v=yVzk7bbQOA8" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Intro to Holography</a>
     <a href="https://www.youtube.com/watch?v=aTB2ryoWIFU" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">The Making of Holograms</a>
     <a href="https://mitmuseum.mit.edu/holography-glossary" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Holography Glossary</a>
